# 5-final-project-spring-2024-snailman-inc

./: .dockerignore  Dockerfile  Pipfile  PytestDockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  test-server.yml  unit-tests.yml
app/: app.py  requirements.txt
app/static/: game.js  scripts.js
app/static/styles/: styles.css
app/templates/: base.html  error.html  friends.html  game.html  index.html  login.html  profile-settings.html  profile.html  score.html  signup.html
database/: Dockerfile
tests/: requirements.txt  test_app.py
